# k510_buildroot

package/client/src/: client.c  client.h
package/people_count/: people_count.mk
package/people_count/src/: CMakeLists.txt  build.sh  readme.txt
package/people_count/src/data/: people_count.sh  video_320x320_240.conf
package/people_count/src/deep_sort/: CMakeLists.txt  cv2_utils.cc  cv2_utils.h  deep_sort.cpp  deep_sort.h  main.cc  object_detect.cc  object_detect.h
package/people_count/src/deep_sort/counting/: Singleton.h  noncopyable.h  traceCounter.cpp  traceCounter.h  trace_gen_interface.cpp  trace_gen_interface.h  types.h  utils.h
package/people_count/src/deep_sort/definition/: config.h  data_type.cpp  data_type.h  predefined_macro.h
package/people_count/src/deep_sort/matching/: kalmanfilter.cpp  kalmanfilter.h  linear_assignment.cpp  linear_assignment.h  nn_matching.cpp  nn_matching.h  track.cpp  track.h  tracker.cpp  tracker.h
package/people_count/src/deep_sort/utils/: util_logger.cpp  util_logger.h  util_time.cpp  util_time.h
